--- a/.babelrc
+++ b/.babelrc
@@ -11,5 +11,6 @@
     "plugins": ["transform-vue-jsx", "transform-runtime", ["component", [{
         "libraryName": "mint-ui",
         "style": true
-    }]]]
+    }]]],
+    "ignore": ["./lib/mui/js/"]
 }
